# NexusDB

./: .gitignore  AGENTS.md  ARCHITECTURAL_GUARDRAILS.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  README.md  TASK_COMPLETION_SUMMARY.md  clippy_check.sh  mkdocs.yml  playwright.config.ts
nexus-explorer/: Cargo.toml  tauri.conf.json
nexus-explorer/capabilities/: default.json
nexus-explorer/icons/: icon.icns
nexus-explorer/src/: main.rs
nexus-explorer/src/commands/: database.rs  edges.rs  mod.rs  nodes.rs  nql.rs  schema.rs
nexus-explorer/src/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
nexus-explorer/src/frontend/src/: App.css  App.tsx  index.css  types.ts
nexus-explorer/src/frontend/src/components/chat/: ChatView.css  ChatView.tsx
nexus-explorer/src/frontend/src/components/database/: DatabaseManager.css  DatabaseManager.tsx
nexus-explorer/src/frontend/src/components/editor/: NqlEditor.css  NqlEditor.tsx
nexus-explorer/src/frontend/src/components/entities/: EdgeList.tsx  EntityList.css  NodeList.tsx
nexus-explorer/src/frontend/src/components/graph/: GraphView.css  GraphView.tsx
nexus-explorer/src/frontend/src/components/home/: HomeView.css  HomeView.tsx
nexus-explorer/src/frontend/src/components/report/: ReportView.css  ReportView.tsx
nexus-explorer/src/frontend/src/components/sidebar/: SchemaBrowser.css  SchemaBrowser.tsx  Sidebar.css  Sidebar.tsx
nexus-explorer/src/frontend/src/lib/: api.ts
nexus-explorer/src/frontend/src/stores/: app.ts
nexus-explorer/src/frontend/src/types/: force-graph.d.ts
(+88 files in other folders)
