[workspace]
members = [
    "nexus-db",
    "nexus-container",
    "nexus-macros",
    "nexus-cli",
    "nql-tests",
    "metrics",
    "nexus-explorer",
]
resolver = "2"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 0
codegen-units = 256
lto = false
panic = "abort"
incremental = true
debug = 1
